[tool.poetry]
name = "repl_python3_CS110-Spring-22-Midterm-Brian-Seo"
version = "0.1.0"
description = ""
authors = ["Brian-YY <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
mpmath = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
